--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/valentino-jaber/TextRx#readme",
   "dependencies": {
+    "@passageidentity/passage-node": "^2.9.0",
     "express": "^4.18.2"
   }
 }
