--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/valentino-jaber/TextRx#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "twilio": "^4.20.1"
   }
 }
