--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@passageidentity/passage-node": "^2.9.0",
     "@vonage/server-sdk": "^3.12.1",
     "express": "^4.18.2",
-    "lru-cache": "^10.1.0"
+    "lru-cache": "^10.1.0",
+    "mongodb": "^6.3.0"
   }
 }
