--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/valentino-jaber/TextRx#readme",
   "dependencies": {
     "@passageidentity/passage-node": "^2.9.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tesseract.js": "^5.0.4"
   }
 }
