--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/valentino-jaber/TextRx.git"
   },
   "author": "",
-  "type":"module",
+  "type": "module",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/valentino-jaber/TextRx/issues"
@@ -20,6 +20,8 @@
   "dependencies": {
     "@passageidentity/passage-js": "^3.13.0",
     "@passageidentity/passage-node": "^2.9.0",
+    "@vonage/server-sdk": "^3.12.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
   }
