--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,10 @@
     "@vonage/server-sdk": "^3.12.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
     "@passageidentity/passage-node": "^2.9.0",
     "express": "^4.18.2",
-    "tesseract.js": "^5.0.4"
+    "tesseract.js": "^5.0.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0"
   }
