--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,10 @@
   "homepage": "https://github.com/valentino-jaber/TextRx#readme",
   "dependencies": {
     "@passageidentity/passage-node": "^2.9.0",
+    "@vonage/server-sdk": "^3.12.1",
     "express": "^4.18.2",
-    "tesseract.js": "^5.0.4"
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.0"
+    "mongoose": "^8.1.0",
+    "tesseract.js": "^5.0.4"
   }
 }
