--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "tesseract.js": "^5.0.4",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.0"
+    "mongoose": "^8.1.0",
+    "node-schedule": "^2.1.1",
+    "tesseract.js": "^5.0.4"
   }
 }
