--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 { 
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node backend/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
