--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,14 @@
     "@passageidentity/passage-js": "^3.13.0",
     "@passageidentity/passage-node": "^2.9.0",
     "@vonage/server-sdk": "^3.12.1",
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "node-schedule": "^2.1.1",
+    "socket.io": "^4.7.4",
     "tesseract.js": "^5.0.4"
   }
 }
