--- a/package.json
+++ b/package.json
@@ -1,1 +1,18 @@
-{"engines":{"node":"20.x"},"scripts":{"start":"node backend/app.js","test":"echo \"Error: no test specified\" && exit 1"},"dependencies":{"@passageidentity/passage-js":"^3.13.0","@passageidentity/passage-node":"^2.9.0","@vonage/server-sdk":"^3.12.1","express":"^4.18.2","node-schedule":"^2.1.1"}}
+{
+  "engines":{"node":"20.x"},
+  "scripts":{
+    "start":"node backend/app.js",
+    "test":"echo \"Error: no test specified\" && exit 1"},
+  "dependencies":{
+    "@passageidentity/passage-js": "^3.13.0",
+    "@passageidentity/passage-node": "^2.9.0",
+    "@vonage/server-sdk": "^3.12.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
+    "node-schedule": "^2.1.1",
+    "tesseract.js": "^5.0.4"
+  }
+}
