--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
+    "node-fetch": "^3.3.2",
     "node-schedule": "^2.1.1",
     "tesseract.js": "^5.0.4"
   }
