--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "node-schedule": "^2.1.1",
+    "openai": "^4.25.0",
+    "openai-api": "^1.3.1",
     "socket.io": "^4.7.4",
     "tesseract.js": "^5.0.4"
   }
